# citatel

./: .gitignore  .gitmodules  2022-09-22-welcome-to-jekyll.markdown  404.qmd  README.md  _quarto-book.yaml  _quarto-pdf.yaml  _quarto.yaml  apt_setup.sh  bot.py  cli.py  custom-dark.scss  custom-light.scss  custom.scss  game.py  index.qmd  interactive.ipynb  playersheet.tex  requirements.txt  requirements_freeze.txt  run-site.sh  run.sh  run_site.sh  scratch.html  scratch.ipynb  scripts.ipynb  search.json  setup_via_apt.bash  setup_via_apt.sh  source.json  test.sh  todo.md  update.py
archive_unincorporated/: 404.html  experimental_text_changer.py  index.md  npcs_and_factions.md  update.py
book/: -1-about.qmd  about.qmd  mutiny.qmd  old_scratch.md  quickstart.qmd  rules.html  rules.qmd  rules.tex
citutils/: pyproject.toml
citutils/citutils/: cards.py  commands.py  database.py  dice_utils.py  docs.py  entity_text_generators.py  foolson.py  my_types.py  notebook.py  parsers.py  tests.py  text.py  text_formatters.py  text_generators.py  text_utils_parsers.py  vars.py
content_generation/: old_cave_notes.md  tables_spaces.yaml
docs/: .gitignore  404.html  Gemfile  README.md  _config.yml  beta  index.html  index.md  license.html  rules.md  scss-notes.html  search.json
entities/: archetypes.json  items.json  npcs.json  skills.json
git_hooks/: pre-commit
old/: bot.py  cli.py  scripts.ipynb  social.qmd  vars.py
output/: .gitignore
pickle_jar/: .gitignore  basic.pickle
py_utils/: cards.py  commands.py  dice_utils.py  entity_text_generators.py  help.txt  vars.py  (+4 more)
(+492 files in other folders)
